[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/bitmap_font_creator/components/IntegerProperty.gd" type="Script" id=1]

[node name="IntegerProperty" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
hint_tooltip = "Property: label

"
script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
margin_right = 34.0
margin_bottom = 40.0
size_flags_vertical = 1
text = "Label"

[node name="IntegerValue" type="SpinBox" parent="."]
margin_left = 38.0
margin_right = 112.0
margin_bottom = 24.0
focus_mode = 2
size_flags_vertical = 0
max_value = 1.0

[connection signal="value_changed" from="IntegerValue" to="." method="_on_IntegerValue_value_changed"]
